- Added user info to order - Added metadata to user - Updated register and new order endpoints
